Fix logo cut off

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -49,3 +49,12 @@ tr.loading, tr.empty {
   }
 }
 
+@media only screen and (max-width: 1440px) and (min-width: 992px) {
+  .side-nav .side-nav-inner .side-nav-logo a .logo {
+    width: 100% !important;
+
+    &:hover {
+      width: 100% !important;
+    }
+  }
+}
